# SteamScreenshotSorter

./: .gitignore  CMakeLists.txt  README.md  sorter.cpp  sorter.hpp
csharp/: JSONManager.cs  Program.cs  SteamImageSorter.csproj
python/: steamsorter.py
